Fixed review tag spacing. #10

--- a/review-list/default.css
+++ b/review-list/default.css
@@ -32,11 +32,6 @@
 
 .fun-count {
   margin-right: 5px;
-  margin-left: 5px;
-  margin-bottom: 5px;
-}
-
-.useful-count {
   margin-bottom: 5px;
 }
 
